Updates new version notice

--- a/public/templates/ui/notice.html
+++ b/public/templates/ui/notice.html
@@ -11,21 +11,11 @@
                         <div class="col-sm-6">
                             <ul class="list-unstyled text-left">
                                 <li><i class="fas fa-fw fa-angle-right"></i>
-                                    Settings for saved routes
+                                    Updated SSO login flow 
                                 </li>
                                 <li><i class="fas fa-fw fa-angle-right"></i>
-                                    Pochven systems, wormholes and routing
+                                    Fixed Zkillboard module killmail fetch
                                 </li>
-                                <li><i class="fas fa-fw fa-angle-right"></i>
-                                    Trailblazer gates and routing
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <ul class="list-unstyled text-left">
-                                <li><i class="fas fa-fw fa-angle-right"></i>Updated list of wormhole signatures</li>
-                                <li><i class="fas fa-fw fa-angle-right"></i>Updated wormhole jump masses</li>
-                                <li><i class="fas fa-fw fa-angle-double-right"></i>Many more improvements/fixes. Complete <a href="javascript:void(0)" class="pf-navbar-version-info">changelog</a></li>
                             </ul>
                         </div>
                     </div>
