--- a/public/templates/modules/sso.html
+++ b/public/templates/modules/sso.html
@@ -21,7 +21,7 @@
                 </svg>
             </a>
             <br>
-            <a target="_blank" href="http://community.eveonline.com/news/dev-blogs/eve-online-sso-and-what-you-need-to-know" rel="noopener">What is this?</a>
+            <a target="_blank" href="https://www.eveonline.com/news/view/eve-online-sso-and-what-you-need-to-know" rel="noopener">What is this?</a>
         </div>
     </div>
 </div>
