--- a/public/templates/layout/footer_map.html
+++ b/public/templates/layout/footer_map.html
@@ -12,9 +12,9 @@
     <div class="pf-footer-center"></div>
 
     <div class="pf-footer-right">
-        <p class="navbar-text txt-color txt-color-gray">All <a href="http://www.eveonline.com/" target="_blank" rel="noopener">EVE ONLINE</a>
+        <p class="navbar-text txt-color txt-color-gray">All <a href="https://www.eveonline.com/" target="_blank" rel="noopener">EVE ONLINE</a>
             related materials are property of
-            <a target="_blank" href="http://www.ccpgames.com" rel="noopener">CCP Games</a>
+            <a target="_blank" href="https://www.ccpgames.com" rel="noopener">CCP Games</a>
         </p>
     </div>
 </footer>
